feat: more collection APIs added
